# card

./: .gitignore  CMakeLists.txt  README.md
python/: build_dataset.ipynb  model.ipynb  report.md
python/report/: report.md  report.new.md
results/: report1.md  result_household_power_consumption.md  summary_household_power_consumption.md
src/: main.cpp  utils.cpp  utils.h
